Save new source and fix categories list's bugs

--- a/utils/i18n/translations/en.json
+++ b/utils/i18n/translations/en.json
@@ -6,14 +6,32 @@
   "ago": "ago",
   "by": "By",
 
-  "forYou": "For you",
-  "top": "Top",
+  "home": "Home",
   "world": "World",
-  "politics": "Politics",
-  "entertainment": "Entertainment",
-  "science": "Science",
+  "news": "News",
   "business": "Business",
+  "startup": "Start Up",
+  "entertainment": "Entertainment",
+  "sport": "Sport",
+  "legal": "Legal",
+  "education": "Education",
+  "newest": "Newest",
+  "top": "Top",
+  "health": "Health",
+  "life": "Life",
+  "travel": "Travel",
+  "science": "Science",
   "technology": "Technology",
+  "vehicles": "Vehicles",
+  "perspectives": "Perspectives",
+  "confide": "Confide",
+  "funny": "Funny",
+  "mostViewed": "Most Viewed",
+  "culture": "Culture",
+  "fakeOrNot": "Fake Or Not",
+  "viewerNews": "Viewer's News",
+  "youngLife": "Young's Life",
+  "relax": "Relax",
 
   "share": "Share",
   "bookmark": "Bookmark",
