--- a/utils/i18n/translations/vn.json
+++ b/utils/i18n/translations/vn.json
@@ -6,14 +6,32 @@
   "ago": "trước",
   "by": "Từ",
 
-  "forYou": "Dành Cho Bạn",
-  "top": "Hàng đầu",
+  "home": "Trang chủ",
   "world": "Thế giới",
-  "politics": "Chính trị",
-  "entertainment": "Giải trí",
-  "science": "Khoa học",
+  "news": "Thời sự",
   "business": "Kinh doanh",
+  "startup": "Start Up",
+  "entertainment": "Giải trí",
+  "sport": "Thể thao",
+  "legal": "Pháp luật",
+  "education": "Giáo dục",
+  "newest": "Mới nhất",
+  "top": "Hàng đầu",
+  "health": "Sức khoẻ",
+  "life": "Đời sống",
+  "travel": "Du lịch",
+  "science": "Khoa học",
   "technology": "Công nghệ",
+  "vehicles": "Xe",
+  "perspectives": "Ý kiến",
+  "confide": "Tâm sự",
+  "funny": "Hài hước",
+  "mostViewed": "Xem nhiều nhất",
+  "culture": "Văn hoá",
+  "fakeOrNot": "Giả thật",
+  "viewerNews": "Bạn đọc làm báo",
+  "youngLife": "Nhịp sống trẻ",
+  "relax": "Thư giãn",
 
   "share": "Chia sẻ",
   "bookmark": "Đánh dấu",
