Add multi-language for change password screen. Add toggle theme feature

--- a/utils/i18n/translations/vn.json
+++ b/utils/i18n/translations/vn.json
@@ -65,6 +65,14 @@
   "chooseLanguage": "Thay đổi ngôn ngữ",
   "emptyCategory": "Không được để trống sở thích",
   "mustChooseOneCategory": "Bạn cần chọn ít nhất 1 sở thích",
+  "save": "LƯU",
+  "changePassword": "Thay đổi mật khẩu",
+  "currentPassword": "Mật khẩu hiện tại",
+  "newPassword": "Mật khẩu mới",
+  "confirmNewPassword": "Nhập lại mật khẩu mới",
+  "emptyPassword": "Không được để trống password",
+  "passwordLength": "Password phải có ít nhất 6 ký tự",
+  "sameNewPassword": "Mật khẩu mới và Nhập lại mật khẩu mới phải trùng nhau",
 
   "loggingOut": "Đăng xuất ?",
   "areYouSure": "Bạn chắc chứ ?",
