--- a/utils/i18n/translations/en.json
+++ b/utils/i18n/translations/en.json
@@ -65,6 +65,14 @@
   "chooseLanguage": "Choose Language",
   "emptyCategory": "Empty category not allowed",
   "mustChooseOneCategory": "You must choose at least one category",
+  "save": "SAVE",
+  "changePassword": "Change Password",
+  "currentPassword": "Current Password",
+  "newPassword": "New Password",
+  "confirmNewPassword": "Confirm New Password",
+  "emptyPassword": "Password must not be empty",
+  "passwordLength": "Password must be at least 6 characters",
+  "sameNewPassword": "New password and confirm new password must be the same",
 
   "loggingOut": "Log Out ?",
   "areYouSure": "Are you sure ?",
