--- a/utils/i18n/translations/vn.json
+++ b/utils/i18n/translations/vn.json
@@ -5,6 +5,8 @@
   "settings": "Cài đặt",
   "ago": "trước",
   "by": "Từ",
+  "somethingWentWrong": "Có lỗi xảy ra",
+  "couldNotFetchNews": "Không thể tải tin tức",
 
   "home": "Trang chủ",
   "world": "Thế giới",
